--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "headers": [
                 {
                     "key": "Content-Type",
-                    "value": "text/plain"
+                    "value": "text/plain; charset=utf-8"
                 }
             ]
         }
